--- a/index.html
+++ b/index.html
@@ -54,24 +54,19 @@
                 <div class="row">
                   <div class="col">
                     <h1 class="display-3">
-                      <strong>Where ideas find you</strong>
+                      <strong>Inspire the World with Your Stories</strong>
                     </h1>
                   </div>
                 </div>
-                <div id="carousel-left-caption" class="row mt-3">
-                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus ipsum saepe voluptate maiores.
-                    Dolor,
-                    magni,
-                    eum accusantium natus molestias fugiat veritatis similique ex expedita aperiam ut modi saepe
-                    officiis
-                    consectetur? <a href="#">Learn More</a> </p>
+                <div id="carousel-left-caption" class="row mt-2">
+                  <p>Share your ideas, experiences and perspectives. Find a community that listens and contributes.</p>
                 </div>
-                <div id="carousel-left-button" class="row">
+                <div id="carousel-left-button" class="row mt-2">
                   <button class="btn btn-warning">Get Started</button>
                 </div>
               </div>
-              <div id="carousel-right" class="col">
-                <img src="/src/img/img-blog-1.jpg" class="img-fluid rounded-3" alt="">
+              <div id="carousel-right img-banner" class="col d-none d-lg-block">
+                <img src="/src/img/img-hero-1.jpg" id="img-banner" class="img-fluid rounded-3" alt="">
               </div>
             </div>
           </div>
@@ -83,39 +78,48 @@
                 <div class="row">
                   <div class="col">
                     <h1 class="display-3">
-                      <strong>Where ideas find you</strong>
+                      <strong>Your writing, World Change</strong>
                     </h1>
                   </div>
                 </div>
-                <div id="carousel-left-caption" class="row mt-3">
-                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus ipsum saepe voluptate maiores.
-                    Dolor,
-                    magni,
-                    eum accusantium natus molestias fugiat veritatis similique ex expedita aperiam ut modi saepe
-                    officiis
-                    consectetur? <a href="#">Learn More</a> </p>
+                <div id="carousel-left-caption" class="row mt-2">
+                  <p>Tell your story. Explore new ideas. Join the infinite world of writing.</p>
                 </div>
-                <div id="carousel-left-button" class="row">
+                <div id="carousel-left-button" class="row mt-2">
                   <button class="btn btn-warning">Get Started</button>
                 </div>
               </div>
-              <div id="carousel-right" class="col">
-                <img src="/src/img/img-blog-1.jpg" class="img-fluid rounded-3" alt="">
+              <div id="carousel-right" class="col d-none d-lg-block">
+                <img src="/src/img/img-hero-2.jpg" id="img-banner" class="img-fluid rounded-3" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="container">
+            <div id="carousel" class="row align-items-center">
+              <div id="carousel-left" class="col">
+                <div class="row">
+                  <div class="col">
+                    <h1 class="display-3">
+                      <strong>Here, Your Words Have Life</strong>
+                    </h1>
+                  </div>
+                </div>
+                <div id="carousel-left-caption" class="row mt-2">
+                  <p>Start sharing stories that matter. Find readers who care about your voice.</p>
+                </div>
+                <div id="carousel-left-button" class="row mt-2">
+                  <button class="btn btn-warning">Get Started</button>
+                </div>
+              </div>
+              <div id="carousel-right" class="col d-none d-lg-block">
+                <img src="/src/img/img-hero-3.jpg" id="img-banner" class="img-fluid rounded-3" alt="">
               </div>
             </div>
           </div>
         </div>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
-        data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
-        data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
     </div>
     <svg id="wave" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
       <path fill="#ffffff" fill-opacity="1" d="M0,256L1440,96L1440,320L0,320Z"></path>
@@ -143,20 +147,20 @@
                   <p class="mb-0">
                     <img src="/src/ic/logo-d.png" alt="Logo" width="20" height="20"
                       class="d-inline-block align-text-top">
-                    David in Skilvul
+                    Dimas
                   </p>
                 </strong>
               </div>
               <div id="contents-1-content-title">
                 <p class="mb-0">
                   <strong>
-                    How to use bootstrap for creating website
+                    5 New Technologies that Will Change the World in 2024
                   </strong>
                 </p>
               </div>
               <div id="contents-1-content-time-and-date">
                 <p>
-                  June 13 | 10 min read
+                  November 15 | 11 min read
                   <i class="bi bi-heart-fill"></i>
                 </p>
               </div>
@@ -174,20 +178,20 @@
                   <p class="mb-0">
                     <img src="/src/ic/logo-d.png" alt="Logo" width="20" height="20"
                       class="d-inline-block align-text-top">
-                    David in Skilvul
+                    Dimas
                   </p>
                 </strong>
               </div>
               <div id="contents-1-content-title">
                 <p class="mb-0">
                   <strong>
-                    How to use bootstrap for creating website
+                    10 Small Habits that Make a Big Difference in Your Life
                   </strong>
                 </p>
               </div>
               <div id="contents-1-content-time-and-date">
                 <p>
-                  June 13 | 10 min read
+                  August 13 | 15 min read
                 </p>
               </div>
             </div>
@@ -204,7 +208,7 @@
                   <p class="mb-0">
                     <img src="/src/ic/logo-d.png" alt="Logo" width="20" height="20"
                       class="d-inline-block align-text-top">
-                    David in Skilvul
+                    Daniel
                   </p>
                 </strong>
               </div>
@@ -217,7 +221,7 @@
               </div>
               <div id="contents-1-content-time-and-date">
                 <p>
-                  June 13 | 10 min read
+                  December 25 | 20 min read
                 </p>
               </div>
             </div>
@@ -234,20 +238,20 @@
                   <p class="mb-0">
                     <img src="/src/ic/logo-d.png" alt="Logo" width="20" height="20"
                       class="d-inline-block align-text-top">
-                    David in Skilvul
+                    David
                   </p>
                 </strong>
               </div>
               <div id="contents-1-content-title">
                 <p class="mb-0">
                   <strong>
-                    How to use bootstrap for creating website
+                    How to Build a Stunning Portfolio in the Digital Age
                   </strong>
                 </p>
               </div>
               <div id="contents-1-content-time-and-date">
                 <p>
-                  June 13 | 10 min read
+                  August 4 | 18 min read
                 </p>
               </div>
             </div>
@@ -264,20 +268,20 @@
                   <p class="mb-0">
                     <img src="/src/ic/logo-d.png" alt="Logo" width="20" height="20"
                       class="d-inline-block align-text-top">
-                    David in Skilvul
+                    Sam
                   </p>
                 </strong>
               </div>
               <div id="contents-1-content-title">
                 <p class="mb-0">
                   <strong>
-                    How to use bootstrap for creating website
+                    Solo Travel: Why You Should Try It At Least Once
                   </strong>
                 </p>
               </div>
               <div id="contents-1-content-time-and-date">
                 <p>
-                  June 13 | 10 min read
+                  December 3 | 10 min read
                 </p>
               </div>
             </div>
@@ -294,20 +298,20 @@
                   <p class="mb-0">
                     <img src="/src/ic/logo-d.png" alt="Logo" width="20" height="20"
                       class="d-inline-block align-text-top">
-                    David in Skilvul
+                    Surya
                   </p>
                 </strong>
               </div>
               <div id="contents-1-content-title">
                 <p class="mb-0">
                   <strong>
-                    How to use bootstrap for creating website
+                    The Story Behind a Cup of Coffee: The Philosophy of Life I Learned
                   </strong>
                 </p>
               </div>
               <div id="contents-1-content-time-and-date">
                 <p>
-                  June 13 | 10 min read
+                  November 11 | 15 min read
                 </p>
               </div>
             </div>
@@ -329,16 +333,17 @@
                   <h5 class="card-title">
                     <img src="/src/ic/logo-d.png" alt="Logo" width="25" height="25"
                       class="d-inline-block text-align-top me-1">
-                    Dimas Nuryadin
+                    Dimas
                   </h5>
                   <p class="card-text mb-0">
-                    <strong>How to use bootstrap for creating a responsive website</strong>
+                    <strong>Using Bootstrap to Simplify Engaging UI/UX Design</strong>
                   </p>
-                  <p class="card-text mb-0">This is a wider card with supporting text below as a natural lead-in to
-                    additional content. This content is a little bit longer.</p>
+                  <p class="card-text mb-0">In this article, we will discuss what Bootstrap is, its benefits for UI/UX
+                    designers, and how you can integrate it into
+                    your design workflow.</p>
                   <div class="card-text row">
                     <div class="col-md-8">
-                      <small class="text-muted">June 13 | 10 min read</small>
+                      <small class="text-muted">November 11 | 15s min read</small>
                     </div>
                     <div class="col-md-4 text-end">
                       <i class="bi bi-bookmark"></i>
@@ -347,7 +352,7 @@
                 </div>
               </div>
               <div class="col-md-4">
-                <img src="/src/img/img-blog-1.jpg" class="img-fluid rounded-end" alt="...">
+                <img src="/src/img/blog-bootstrap.jpg" class="img-fluid rounded-end" alt="...">
               </div>
             </div>
           </div>
@@ -358,16 +363,17 @@
                   <h5 class="card-title">
                     <img src="/src/ic/logo-d.png" alt="Logo" width="25" height="25"
                       class="d-inline-block text-align-top me-1">
-                    Dimas Nuryadin
+                    Dimas
                   </h5>
                   <p class="card-text mb-0">
-                    <strong>How to use bootstrap for creating a responsive website</strong>
+                    <strong>10 Small Habits that Make a Big Difference in Your Life</strong>
                   </p>
-                  <p class="card-text mb-0">This is a wider card with supporting text below as a natural lead-in to
-                    additional content. This content is a little bit longer.</p>
+                  <p class="card-text mb-0">Write about simple habits such as meditation, reading 10 minutes a day, or
+                    journal writing, that can have a significant
+                    impact on your daily life.</p>
                   <div class="card-text row">
                     <div class="col-md-8">
-                      <small class="text-muted">June 13 | 10 min read</small>
+                      <small class="text-muted">November 24 | 10 min read</small>
                     </div>
                     <div class="col-md-4 text-end">
                       <i class="bi bi-bookmark"></i>
@@ -376,7 +382,7 @@
                 </div>
               </div>
               <div class="col-md-4">
-                <img src="/src/img/img-blog-1.jpg" class="img-fluid rounded-end" alt="...">
+                <img src="/src/img/blog-ui.jpg" class="img-fluid rounded-end" alt="...">
               </div>
             </div>
           </div>
