--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Small Medium</title>
 
   <!-- Style -->
-  <link rel="stylesheet" href="/src/style/stylesheet.css">
+  <link rel="stylesheet" href="/Bootstrap5-Medium/src/style/stylesheet.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -22,7 +22,8 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <a class="navbar-brand" href="#">
-          <img src="/src/ic/logo-d.png" alt="Logo" width="30" height="30" class="d-inline-block align-text-top">
+          <img src="/Bootstrap5-Medium/src/ic/logo-d.png" alt="Logo" width="30" height="30"
+            class="d-inline-block align-text-top">
           Small Medium
         </a>
 
@@ -66,7 +67,7 @@
                 </div>
               </div>
               <div id="carousel-right img-banner" class="col d-none d-lg-block">
-                <img src="/src/img/img-hero-1.jpg" id="img-banner" class="img-fluid rounded-3" alt="">
+                <img src="/Bootstrap5-Medium/src/img/img-hero-1.jpg" id="img-banner" class="img-fluid rounded-3" alt="">
               </div>
             </div>
           </div>
@@ -90,7 +91,7 @@
                 </div>
               </div>
               <div id="carousel-right" class="col d-none d-lg-block">
-                <img src="/src/img/img-hero-2.jpg" id="img-banner" class="img-fluid rounded-3" alt="">
+                <img src="/Bootstrap5-Medium/src/img/img-hero-2.jpg" id="img-banner" class="img-fluid rounded-3" alt="">
               </div>
             </div>
           </div>
@@ -114,7 +115,7 @@
                 </div>
               </div>
               <div id="carousel-right" class="col d-none d-lg-block">
-                <img src="/src/img/img-hero-3.jpg" id="img-banner" class="img-fluid rounded-3" alt="">
+                <img src="/Bootstrap5-Medium/src/img/img-hero-3.jpg" id="img-banner" class="img-fluid rounded-3" alt="">
               </div>
             </div>
           </div>
@@ -130,7 +131,7 @@
     <div class="container">
       <div id="title" class="row">
         <h3>
-          <img src="/src/ic/logo-d.png" alt="Logo" width="30" height="30"
+          <img src="/Bootstrap5-Medium/src/ic/logo-d.png" alt="Logo" width="30" height="30"
             class="d-inline-block align-text-top me-2">Trending
           on Small Medium
         </h3>
@@ -145,7 +146,7 @@
               <div id="contents-1-content-author">
                 <strong>
                   <p class="mb-0">
-                    <img src="/src/ic/logo-d.png" alt="Logo" width="20" height="20"
+                    <img src="/Bootstrap5-Medium/src/ic/logo-d.png" alt="Logo" width="20" height="20"
                       class="d-inline-block align-text-top">
                     Dimas
                   </p>
@@ -176,7 +177,7 @@
               <div id="contents-1-content-author">
                 <strong>
                   <p class="mb-0">
-                    <img src="/src/ic/logo-d.png" alt="Logo" width="20" height="20"
+                    <img src="/Bootstrap5-Medium/src/ic/logo-d.png" alt="Logo" width="20" height="20"
                       class="d-inline-block align-text-top">
                     Dimas
                   </p>
@@ -206,7 +207,7 @@
               <div id="contents-1-content-author">
                 <strong>
                   <p class="mb-0">
-                    <img src="/src/ic/logo-d.png" alt="Logo" width="20" height="20"
+                    <img src="/Bootstrap5-Medium/src/ic/logo-d.png" alt="Logo" width="20" height="20"
                       class="d-inline-block align-text-top">
                     Daniel
                   </p>
@@ -236,7 +237,7 @@
               <div id="contents-1-content-author">
                 <strong>
                   <p class="mb-0">
-                    <img src="/src/ic/logo-d.png" alt="Logo" width="20" height="20"
+                    <img src="/Bootstrap5-Medium/src/ic/logo-d.png" alt="Logo" width="20" height="20"
                       class="d-inline-block align-text-top">
                     David
                   </p>
@@ -266,7 +267,7 @@
               <div id="contents-1-content-author">
                 <strong>
                   <p class="mb-0">
-                    <img src="/src/ic/logo-d.png" alt="Logo" width="20" height="20"
+                    <img src="/Bootstrap5-Medium/src/ic/logo-d.png" alt="Logo" width="20" height="20"
                       class="d-inline-block align-text-top">
                     Sam
                   </p>
@@ -296,7 +297,7 @@
               <div id="contents-1-content-author">
                 <strong>
                   <p class="mb-0">
-                    <img src="/src/ic/logo-d.png" alt="Logo" width="20" height="20"
+                    <img src="/Bootstrap5-Medium/src/ic/logo-d.png" alt="Logo" width="20" height="20"
                       class="d-inline-block align-text-top">
                     Surya
                   </p>
@@ -331,7 +332,7 @@
               <div class="col-md-8">
                 <div class="card-body">
                   <h5 class="card-title">
-                    <img src="/src/ic/logo-d.png" alt="Logo" width="25" height="25"
+                    <img src="/Bootstrap5-Medium/src/ic/logo-d.png" alt="Logo" width="25" height="25"
                       class="d-inline-block text-align-top me-1">
                     Dimas
                   </h5>
@@ -352,7 +353,7 @@
                 </div>
               </div>
               <div class="col-md-4">
-                <img src="/src/img/blog-bootstrap.jpg" class="img-fluid rounded-end" alt="...">
+                <img src="/Bootstrap5-Medium/src/img/blog-bootstrap.jpg" class="img-fluid rounded-end" alt="...">
               </div>
             </div>
           </div>
@@ -361,7 +362,7 @@
               <div class="col-md-8">
                 <div class="card-body">
                   <h5 class="card-title">
-                    <img src="/src/ic/logo-d.png" alt="Logo" width="25" height="25"
+                    <img src="/Bootstrap5-Medium/src/ic/logo-d.png" alt="Logo" width="25" height="25"
                       class="d-inline-block text-align-top me-1">
                     Dimas
                   </h5>
@@ -382,7 +383,7 @@
                 </div>
               </div>
               <div class="col-md-4">
-                <img src="/src/img/blog-ui.jpg" class="img-fluid rounded-end" alt="...">
+                <img src="/Bootstrap5-Medium/src/img/blog-ui.jpg" class="img-fluid rounded-end" alt="...">
               </div>
             </div>
           </div>
